New Crowdin updates (#10714)

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
+  "Disconnect": "Trennen",
   "Disconnect analytics": "Analytics trennen",
   "Home": "Startseite",
   "Drafts": "Entwürfe",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Sammlungen konnten nicht geladen werden, bitte lade die App neu",
   "Start view": "Startseite",
   "Install now": "Jetzt installieren",
-  "Disconnect": "Trennen",
-  "Disconnecting": "Trenne",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sind Sie sicher, dass Sie die <em>{{ service }}</em> Integration trennen möchten?",
-  "This will stop sending analytics events to the configured instance.": "Dies stoppt das Senden von Analyseereignissen an die konfigurierte Instanz.",
   "Deleted Collection": "Gelöschte Sammlung",
   "Untitled": "Ohne Titel",
   "Unpin": "Lospinnen",
@@ -314,8 +311,6 @@
   "Objects": "Objekte",
   "Symbols": "Symbole",
   "Flags": "Flaggen",
-  "Select a color": "Wähle eine Farbe",
-  "Loading": "Laden",
   "View only": "Nur anzeigen",
   "Can edit": "Darf bearbeiten",
   "No access": "Kein Zugriff",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Bilder im Dokument anzeigen, navigieren oder herunterladen",
   "Zoom in": "Vergrößern",
   "Zoom out": "Verkleinern",
+  "Edit diagram": "Edit diagram",
   "Close": "Schließen",
   "Previous": "Zurück",
   "Next": "Nächste",
@@ -450,6 +446,8 @@
   "Installation": "Installation",
   "Unstar document": "Favorisierung entfernen",
   "Star document": "Dokument zu Favoriten hinzufügen",
+  "Select a color": "Wähle eine Farbe",
+  "Loading": "Laden",
   "Template created, go ahead and customize it": "Vorlage erstellt, fortfahren und anpassen",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Das Erstellen einer Vorlage durch <em>{{titleWithDefault}}</em> ist eine non-destruktive Aktion – wir erstellen eine Kopie des Dokuments und verwandeln es in eine Vorlage, die als Ausgangspunkt für neue Dokumente verwendet werden kann.",
   "Enable other members to use the template immediately": "Erlaube anderen Mitgliedern die Vorlage sofort zu verwenden",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Beim Speichern der Sammlung ist leider ein Fehler aufgetreten",
   "Add a description": "Beschreibung hinzufügen",
   "Overview": "Übersicht",
+  "Popular": "Popular",
   "Recently updated": "Vor Kurzem aktualisiert",
   "Recently published": "Vor Kurzem veröffentlicht",
   "Least recently updated": "Am längsten nicht aktualisiert",
@@ -783,7 +782,8 @@
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Entschuldigung, beim Laden der Seite ist ein unbekannter Fehler aufgetreten. Bitte versuchen Sie es erneut oder kontaktieren Sie den Support, falls das Problem weiterhin besteht.",
   "Created by me": "Von mir erstellt",
-  "Weird, this shouldn’t ever be empty": "Seltsam, das sollte nie leer sein",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du hast noch keine Dokumente erstellt",
   "Documents you’ve recently viewed will be here for easy access": "Dokumente, die du dir kürzlich angesehen hast, sind hier für einen einfachen Zugriff verfügbar",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sind Sie sicher, den Token {{ tokenName }} zu widerrufen?",
   "Disconnect integration": "Integration trennen",
   "Connected": "Verbunden",
+  "Disconnecting": "Trenne",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sind Sie sicher, dass Sie die <em>{{ service }}</em> Integration trennen möchten?",
+  "This will stop sending analytics events to the configured instance.": "Dies stoppt das Senden von Analyseereignissen an die konfigurierte Instanz.",
   "Allowed domains": "Erlaubte Domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Die Domänen, die mit SSO neue Konten erstellen dürfen. Das Ändern dieser Einstellung wirkt sich nicht auf bestehende Benutzerkonten aus.",
   "Remove domain": "Domäne entfernen",
@@ -1218,6 +1221,9 @@
   "Expires today": "Läuft heute ab",
   "Expires tomorrow": "Läuft morgen ab",
   "Expires {{ date }}": "Läuft am {{ date }} ab",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Papierformat",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Du hast vor {{ timeAgo }} erstellt",
   "{{ user }} created {{ timeAgo }}": "{{ user }} erstellte vor {{ timeAgo }}",
   "Caption": "Beschriftung",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Öffnen",
   "Error loading data": "Fehler beim Laden der Daten"
 }
