--- a/shared/i18n/locales/en_GB/translation.json
+++ b/shared/i18n/locales/en_GB/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "Disconnect": "Disconnect",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Drafts",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Collections could not be loaded, please reload the app",
   "Start view": "Start view",
   "Install now": "Install now",
-  "Disconnect": "Disconnect",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Deleted Collection",
   "Untitled": "Untitled",
   "Unpin": "Unpin",
@@ -314,8 +311,6 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
-  "Select a color": "Select a colour",
-  "Loading": "Loading",
   "View only": "View only",
   "Can edit": "Can edit",
   "No access": "No access",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Close",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "Installation",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
+  "Select a color": "Select a colour",
+  "Loading": "Loading",
   "Template created, go ahead and customize it": "Template created, go ahead and customise it",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Sorry, an error occurred saving the collection",
   "Add a description": "Add a description",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Recently updated",
   "Recently published": "Recently published",
   "Least recently updated": "Least recently updated",
@@ -783,7 +782,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred while loading the page. Please try again, or contact support if the issue persists.",
   "Created by me": "Created by me",
-  "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
