--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "شما از سند مشترک خارج شده‌اید",
   "Could not leave document": "امکان خروج از سند وجود ندارد",
   "Apply template": "اعمال قالب",
+  "Disconnect": "قطع اتصال",
   "Disconnect analytics": "قطع اتصال تحلیل‌گر",
   "Home": "خانه",
   "Drafts": "پیش‌نویس‌ها",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "مجموعه‌ ها بارگذاری نمی‌شوند، لطفاً برنامه را دوباره بارگیری کنید",
   "Start view": "نمای شروع",
   "Install now": "اکنون نصب شود",
-  "Disconnect": "قطع اتصال",
-  "Disconnecting": "در حال قطع اتصال",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "آیا مطمئن هستید که می‌خواهید یکپارچه‌سازی <em>{{ service }}</em> را قطع کنید؟",
-  "This will stop sending analytics events to the configured instance.": "با این کار، ارسال رویدادهای تحلیلی به نمونهٔ پیکربندی‌شده متوقف می‌شود.",
   "Deleted Collection": "مجموعه‌های حذف شده",
   "Untitled": "بدون عنوان",
   "Unpin": "برداشتن سنجاق",
@@ -314,8 +311,6 @@
   "Objects": "اشیاء",
   "Symbols": "نمادها",
   "Flags": "علامت‌ها",
-  "Select a color": "یک رنگ را انتخاب کنید",
-  "Loading": "بارگذاری",
   "View only": "فقط مشاهده",
   "Can edit": "قابل ویرایش",
   "No access": "بدون دسترسی",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "مشاهده، مرور یا دانلود تصاویر سند",
   "Zoom in": "بزرگ‌نمایی",
   "Zoom out": "کوچک‌نمایی",
+  "Edit diagram": "Edit diagram",
   "Close": "بستن",
   "Previous": "قبلی",
   "Next": "بعدی",
@@ -450,6 +446,8 @@
   "Installation": "نسخه",
   "Unstar document": "حذف ستاره از سند",
   "Star document": "ستاره‌دار کردن سند",
+  "Select a color": "یک رنگ را انتخاب کنید",
+  "Loading": "بارگذاری",
   "Template created, go ahead and customize it": "الگو ایجاد شد، پیش بروید و آن را سفارشی کنید",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "ایجاد الگو از <em>{{titleWithDefault}}</em> باعث تخریب چیزی نمی‌شود - ما یک کپی از سند ایجاد می کنیم و آن را به الگویی تبدیل می کنیم که می تواند به عنوان نقطه شروع اسناد جدید استفاده شود.",
   "Enable other members to use the template immediately": "امکان استفادهٔ فوری دیگر اعضا از قالب فراهم شود",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
   "Add a description": "توضیحاتی اضافه کنید",
   "Overview": "بررسی کلی",
+  "Popular": "Popular",
   "Recently updated": "آخرین به‌روزرسانی",
   "Recently published": "آخرین انتشار",
   "Least recently updated": "اولین به‌روزرسانی",
@@ -783,7 +782,8 @@
   "Something went wrong": "مشکلی پیش آمد",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "متأسفانه، خطای ناشناخته‌ای در بارگذاری صفحه رخ داده است. لطفاً دوباره تلاش کنید یا در صورت ادامه مشکل، با پشتیبانی تماس بگیرید.",
   "Created by me": "ایجاد شده توسط من",
-  "Weird, this shouldn’t ever be empty": "عجیب است، این هرگز نباید خالی باشد",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "شما هنوز هیچ سندی ایجاد نکرده‌اید",
   "Documents you’ve recently viewed will be here for easy access": "اسنادی که اخیراً مشاهده کرده اید برای دسترسی آسان در اینجا خواهند بود",
   "{{ count }} invites sent": "{{ count }} دعوت‌نامه ارسال شد",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "آیا مطمئن هستید که می‌خواهید توکن {{ tokenName }} را لغو کنید؟",
   "Disconnect integration": "قطع ادغام",
   "Connected": "متصل شد",
+  "Disconnecting": "در حال قطع اتصال",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "آیا مطمئن هستید که می‌خواهید یکپارچه‌سازی <em>{{ service }}</em> را قطع کنید؟",
+  "This will stop sending analytics events to the configured instance.": "با این کار، ارسال رویدادهای تحلیلی به نمونهٔ پیکربندی‌شده متوقف می‌شود.",
   "Allowed domains": "دامنه‌های مجاز",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "دامنه‌هایی که باید اجازه ایجاد حساب‌های جدید با استفاده از SSO را داشته باشند. تغییر این تنظیمات بر حساب‌های کاربری موجود تأثیری نخواهد داشت.",
   "Remove domain": "حذف دامنه",
@@ -1218,6 +1221,9 @@
   "Expires today": "امروز منقضی می شود",
   "Expires tomorrow": "فردا منقضی می شود",
   "Expires {{ date }}": "منقضی می شود {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "ویژگی جدید",
   "Paper size": "سایز کاغذ",
   "Ask AI \"{{question}}\"": "از هوش مصنوعی بپرسید \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "شما {{ timeAgo }} ایجاد کردید",
   "{{ user }} created {{ timeAgo }}": "{{ user }} {{ timeAgo }} ایجاد کرد",
   "Caption": "زیرنویس",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "باز کردن",
   "Error loading data": "خطا در بارگذاری دیتا"
 }
