--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Vous avez quitté le document partagé",
   "Could not leave document": "Impossible de quitter le document",
   "Apply template": "Appliquer le modèle",
+  "Disconnect": "Se déconnecter",
   "Disconnect analytics": "Déconnecter les statistiques",
   "Home": "Accueil",
   "Drafts": "Brouillons",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Les collections n'ont pas pu être chargées, veuillez recharger la page",
   "Start view": "Page d'accueil",
   "Install now": "Installer maintenant",
-  "Disconnect": "Se déconnecter",
-  "Disconnecting": "Déconnexion en cours",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Êtes-vous sûr de vouloir déconnecter l'intégration <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "Ceci arrêtera d'envoyer des événements de statistiques à l'instance configurée.",
   "Deleted Collection": "Collection supprimée",
   "Untitled": "Sans titre",
   "Unpin": "Désépingler",
@@ -314,8 +311,6 @@
   "Objects": "Objets",
   "Symbols": "Symboles",
   "Flags": "Drapeaux",
-  "Select a color": "Sélectionnez une couleur",
-  "Loading": "Chargement",
   "View only": "Voir seulement",
   "Can edit": "Peut modifier",
   "No access": "Pas d'accès",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
   "Zoom in": "Zoom avant",
   "Zoom out": "Zoom arrière",
+  "Edit diagram": "Edit diagram",
   "Close": "Fermer",
   "Previous": "Précédent",
   "Next": "Suivant",
@@ -354,8 +350,8 @@
   "Reaction picker": "Sélecteur de réaction",
   "Could not load reactions": "Impossible de charger les réactions",
   "Reaction": "Réaction",
-  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m de lecture",
+  "{{ hours }}h read": "{{ hours }}h de lecture",
   "{{ minutes }}m read": "{{ minutes }}m de lecture",
   "Revision deleted": "Révision supprimée",
   "Current version": "Version actuelle",
@@ -450,6 +446,8 @@
   "Installation": "Installation",
   "Unstar document": "Retirer le document des favoris",
   "Star document": "Mettre en favoris le document",
+  "Select a color": "Sélectionnez une couleur",
+  "Loading": "Chargement",
   "Template created, go ahead and customize it": "Le modèle a été créé, vous pouvez maintenant le personnaliser",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "La création d'un modèle à partir de <em>{{titleWithDefault}}</em> est une action non destructrice - nous allons faire une copie du document et le transformer en un modèle qui peut être utilisé comme point de départ pour de nouveaux documents.",
   "Enable other members to use the template immediately": "Autoriser les autres membres à utiliser le modèle immédiatement",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
   "Add a description": "Ajouter une description",
   "Overview": "Aperçu",
+  "Popular": "Populaire",
   "Recently updated": "Récemment mis à jour",
   "Recently published": "Récemment publiés",
   "Least recently updated": "Anciennement modifiés",
@@ -783,7 +782,8 @@
   "Something went wrong": "Un problème est survenu",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Désolé ! Une erreur inconnue s'est produite lors du chargement de la page. Merci de réessayer ou de contacter l'assistance si l'erreur perdure.",
   "Created by me": "Créé par moi",
-  "Weird, this shouldn’t ever be empty": "Bizarre, ça ne devrait jamais être vide",
+  "Weird, this shouldn't ever be empty": "Étrange, cela ne devrait jamais être vide",
+  "Documents with recent activity will appear here": "Les documents ayant une activité récente apparaîtront ici",
   "You haven’t created any documents yet": "Vous n'avez pas encore créé de documents",
   "Documents you’ve recently viewed will be here for easy access": "Les documents que vous avez récemment consultés seront facilement accessibles ici",
   "{{ count }} invites sent": "{{ count }} invitations envoyées",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Voulez-vous vraiment supprimer le jeton {{ tokenName }}?",
   "Disconnect integration": "Déconnecter l'intégration",
   "Connected": "Connecté",
+  "Disconnecting": "Déconnexion en cours",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Êtes-vous sûr de vouloir déconnecter l'intégration <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "Ceci arrêtera d'envoyer des événements de statistiques à l'instance configurée.",
   "Allowed domains": "Domaines autorisés",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domaines autorisés à créer de nouveaux comptes en utilisant le SSO. La modification de ce paramètre n'affecte pas les comptes d'utilisateurs existants.",
   "Remove domain": "Supprimer le domaine",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expire aujourd'hui",
   "Expires tomorrow": "Expire demain",
   "Expires {{ date }}": "Expire le {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Nouvel attribut",
   "Paper size": "Taille du papier",
   "Ask AI \"{{question}}\"": "Demander à l'IA \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Créé par vous il y a {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "Créé par {{ user }} il y a {{ timeAgo }}",
   "Caption": "Légende",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Ouvrir",
   "Error loading data": "Erreur de chargement des données"
 }
