--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Hai lasciato il documento condiviso",
   "Could not leave document": "Impossibile lasciare il documento",
   "Apply template": "Applica modello",
+  "Disconnect": "Disconnetti",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Bozze",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Impossibile caricare le raccolte, per favore ricarica l'app",
   "Start view": "Schermata iniziale",
   "Install now": "Installa ora",
-  "Disconnect": "Disconnetti",
-  "Disconnecting": "Disconnessione in corso",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sei sicuro di voler disconnettere l'integrazione con <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raccolte Eliminate",
   "Untitled": "Senza titolo",
   "Unpin": "Rimuovi contrassegno",
@@ -314,8 +311,6 @@
   "Objects": "Oggetti",
   "Symbols": "Simboli",
   "Flags": "Bandiere",
-  "Select a color": "Seleziona un colore",
-  "Loading": "Caricamento in corso",
   "View only": "Visualizza soltanto",
   "Can edit": "Può modificare",
   "No access": "Accesso negato",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Visualizza, naviga, o scarica immagini nel documento",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Chiudi",
   "Previous": "Precedente",
   "Next": "Successivo",
@@ -450,6 +446,8 @@
   "Installation": "Installazione",
   "Unstar document": "Rimuovi dai preferiti",
   "Star document": "Condividi documento",
+  "Select a color": "Seleziona un colore",
+  "Loading": "Caricamento in corso",
   "Template created, go ahead and customize it": "Modello creato, procedi e personalizzalo",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Creare un modello da <em>{{titleWithDefault}}</em> è un'azione non distruttiva - faremo una copia del documento e lo convertiremo in un modello, così che potrà essere usato come punto d'inizio per nuovi documenti.",
   "Enable other members to use the template immediately": "Consenti agli altri membri di utilizzare il modello immediatamente",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Spiacenti, si è verificato un errore durante il salvataggio della raccolta",
   "Add a description": "Aggiungi una descrizione",
   "Overview": "Descrizione",
+  "Popular": "Popular",
   "Recently updated": "Aggiornati di recente",
   "Recently published": "Pubblicati di recente",
   "Least recently updated": "Aggiornati meno recentemente",
@@ -783,7 +782,8 @@
   "Something went wrong": "Qualcosa è andato storto",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Si è verificato un errore sconosciuto durante il caricamento della pagina. Riprova o contatta il supporto se il problema persiste.",
   "Created by me": "Creato da me",
-  "Weird, this shouldn’t ever be empty": "Strano, questo non dovrebbe mai essere vuoto",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Non hai ancora creato alcun documento",
   "Documents you’ve recently viewed will be here for easy access": "I documenti che hai recentemente visualizzato compariranno qui per facilitarne l'accesso",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Sei sicuro di voler revocare il token {{ tokenName }}?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connesso",
+  "Disconnecting": "Disconnessione in corso",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Sei sicuro di voler disconnettere l'integrazione con <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Domini consentiti",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "I domini che dovrebbero essere autorizzati a creare nuovi account utilizzando SSO. La modifica di questa impostazione non influisce sugli utenti esistenti.",
   "Remove domain": "Rimuovi dominio",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
