--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
   "Apply template": "Apply template",
+  "Disconnect": "接続を解除",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "ホーム",
   "Drafts": "下書き",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "コレクションを読み込めませんでした。アプリを再読み込みしてください。",
   "Start view": "起動時の画面",
   "Install now": "インストールしています",
-  "Disconnect": "接続を解除",
-  "Disconnecting": "切断中",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "削除したコレクション",
   "Untitled": "無題のドキュメント",
   "Unpin": "ピン留めを外す",
@@ -314,8 +311,6 @@
   "Objects": "オブジェクト",
   "Symbols": "シンボル",
   "Flags": "フラグ",
-  "Select a color": "色を選択",
-  "Loading": "ローディング",
   "View only": "表示のみ",
   "Can edit": "編集可能",
   "No access": "アクセス不可",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "閉じる",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "インストール",
   "Unstar document": "お気に入りから削除",
   "Star document": "お気に入りに追加",
+  "Select a color": "色を選択",
+  "Loading": "ローディング",
   "Template created, go ahead and customize it": "テンプレートが作成されました",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "<em>{{titleWithDefault}}</em>のドキュメントからテンプレートを作成すると、元のドキュメントはコピーされ、テンプレートになります。",
   "Enable other members to use the template immediately": "他のメンバーがテンプレートをすぐに利用できるようにする",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "コレクションの保存中にエラーが発生しました",
   "Add a description": "説明文を追加",
   "Overview": "概要",
+  "Popular": "Popular",
   "Recently updated": "更新日の新しい順",
   "Recently published": "最近公開されたもの",
   "Least recently updated": "更新日の古い順",
@@ -783,7 +782,8 @@
   "Something went wrong": "エラーが発生しました",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "自分が作成",
-  "Weird, this shouldn’t ever be empty": "ここには何もありません",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "ここにはまだドキュメントがありません",
   "Documents you’ve recently viewed will be here for easy access": "最近閲覧したドキュメントがここに表示されます",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "トークン {{ tokenName }} を失効します\nよろしいですか？",
   "Disconnect integration": "連携を解除",
   "Connected": "接続されました",
+  "Disconnecting": "切断中",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "許可されているドメイン",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO を使用して新しいアカウントを作成できるドメイン。この設定を変更しても、既存のユーザーには影響しません。",
   "Remove domain": "ドメインを削除",
@@ -1218,6 +1221,9 @@
   "Expires today": "今日で期限切れ",
   "Expires tomorrow": "明日で期限切れ",
   "Expires {{ date }}": "期限: {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "あなたが {{ timeAgo }} に作成しました",
   "{{ user }} created {{ timeAgo }}": "{{ user }} が {{ timeAgo }} に作成しました",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "データ読込エラー"
 }
