--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Du har forlatt det delte dokumentet",
   "Could not leave document": "Kunne ikke forlate dokument",
   "Apply template": "Bruk mal",
+  "Disconnect": "Koble fra",
   "Disconnect analytics": "Koble fra analysedata",
   "Home": "Hjem",
   "Drafts": "Utkast",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Samlinger kunne ikke lastes inn, vennligst last inn appen på nytt",
   "Start view": "Startvisning",
   "Install now": "Installer nå",
-  "Disconnect": "Koble fra",
-  "Disconnecting": "Kobler fra",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Er du sikker på at du vil koble fra <em>{{ service }}</em>-integrasjonen?",
-  "This will stop sending analytics events to the configured instance.": "Dette vil slutte å sende analytiske hendelser til den konfigurerte instansen.",
   "Deleted Collection": "Slettet samling",
   "Untitled": "Uten tittel",
   "Unpin": "Løsne",
@@ -314,8 +311,6 @@
   "Objects": "Gjenstander",
   "Symbols": "Symboler",
   "Flags": "Flagg",
-  "Select a color": "Velg en farge",
-  "Loading": "Laster",
   "View only": "Bare vis",
   "Can edit": "Kan redigere",
   "No access": "Ingen tilgang",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Vis, naviger, eller last ned bilder i dokumentet",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Lukk",
   "Previous": "Forrige",
   "Next": "Neste",
@@ -450,6 +446,8 @@
   "Installation": "Installasjon",
   "Unstar document": "Fjern stjerne fra dokument",
   "Star document": "Stjernemarker dokument",
+  "Select a color": "Velg en farge",
+  "Loading": "Laster",
   "Template created, go ahead and customize it": "Mal opprettet, gå videre og tilpass den",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Å opprette en mal fra <em>{{titleWithDefault}}</em> er en ikke-destruktiv handling – vi vil lage en kopi av dokumentet og gjøre det til en mal som kan brukes som utgangspunkt for nye dokumenter.",
   "Enable other members to use the template immediately": "Tillat andre medlemmer å bruke malen nå",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Beklager, det oppstod en feil ved lagring av samlingen",
   "Add a description": "Legg til en beskrivelse",
   "Overview": "Oversikt",
+  "Popular": "Popular",
   "Recently updated": "Nylig oppdatert",
   "Recently published": "Nylig publisert",
   "Least recently updated": "Minst nylig oppdatert",
@@ -783,7 +782,8 @@
   "Something went wrong": "Noe gikk galt",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Beklager, en ukjent feil oppstod under lasting av siden. Prøv igjen, eller kontakt brukerstøtte hvis problemet vedvarer.",
   "Created by me": "Opprettet av meg",
-  "Weird, this shouldn’t ever be empty": "Rart, dette burde aldri være tomt",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du har ikke opprettet noen dokumenter ennå",
   "Documents you’ve recently viewed will be here for easy access": "Dokumenter du nylig har sett vil være her for enkel tilgang",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Er du sikker på at du vil tilbakekalle {{ tokenName }} token?",
   "Disconnect integration": "Koble fra integrasjon",
   "Connected": "Tilkoblet",
+  "Disconnecting": "Kobler fra",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Er du sikker på at du vil koble fra <em>{{ service }}</em>-integrasjonen?",
+  "This will stop sending analytics events to the configured instance.": "Dette vil slutte å sende analytiske hendelser til den konfigurerte instansen.",
   "Allowed domains": "Tillatte domener",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domenene som skal tillates å opprette nye kontoer ved bruk av SSO. Å endre denne innstillingen påvirker ikke eksisterende brukerkontoer.",
   "Remove domain": "Fjern domene",
@@ -1218,6 +1221,9 @@
   "Expires today": "Utløper i dag",
   "Expires tomorrow": "Utløper i morgen",
   "Expires {{ date }}": "Utløper {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Du opprettet {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} opprettet {{ timeAgo }}",
   "Caption": "Bildetekst",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Åpen",
   "Error loading data": "Feil ved lasting av data"
 }
