--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Je hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
   "Apply template": "Sjabloon toepassen",
+  "Disconnect": "Ontkoppel",
   "Disconnect analytics": "Analytics ontkoppelen",
   "Home": "Startscherm",
   "Drafts": "Concepten",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Collecties konden niet worden geladen, start de app alsjeblieft opnieuw op",
   "Start view": "Start weergave",
   "Install now": "Nu installeren",
-  "Disconnect": "Ontkoppel",
-  "Disconnecting": "Ontkoppelen",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Weet je zeker dat je de koppeling met <em>{{ service }}</em> wilt verbreken?",
-  "This will stop sending analytics events to the configured instance.": "Hiermee stopt het verzenden van analytics-gebeurtenissen naar de geconfigureerde instantie.",
   "Deleted Collection": "Verwijderde Collectie",
   "Untitled": "Naamloos",
   "Unpin": "Losmaken",
@@ -314,8 +311,6 @@
   "Objects": "Objecten",
   "Symbols": "Symbolen",
   "Flags": "Vlaggen",
-  "Select a color": "Selecteer een kleur",
-  "Loading": "Aan het laden",
   "View only": "Alleen bekijken",
   "Can edit": "Kan bewerken",
   "No access": "Geen toegang",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Zoom in": "Inzoomen",
   "Zoom out": "Uitzoomen",
+  "Edit diagram": "Edit diagram",
   "Close": "Sluiten",
   "Previous": "Vorige",
   "Next": "Volgende",
@@ -450,6 +446,8 @@
   "Installation": "Installatie",
   "Unstar document": "Document verwijderen uit favorieten",
   "Star document": "Document toevoegen aan favorieten",
+  "Select a color": "Selecteer een kleur",
+  "Loading": "Aan het laden",
   "Template created, go ahead and customize it": "Sjabloon gemaakt, ga aan de gang en pas het aan",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Het maken van een sjabloon van <em>{{titleWithDefault}}</em> is een niet-destructieve actie – we maken een kopie van het document en maken daar een sjabloon van dat kan worden gebruikt als uitgangspunt voor nieuwe documenten.",
   "Enable other members to use the template immediately": "Schakel andere leden in om de sjabloon onmiddellijk te gebruiken",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
   "Add a description": "Beschrijving toevoegen",
   "Overview": "Overzicht",
+  "Popular": "Popular",
   "Recently updated": "Onlangs bijgewerkt",
   "Recently published": "Onlangs gepubliceerd",
   "Least recently updated": "Minst recent bijgewerkt",
@@ -783,7 +782,8 @@
   "Something went wrong": "Er ging iets mis",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, er is een onbekende fout opgetreden bij het laden van de pagina. Probeer het opnieuw of neem contact op met ondersteuning als het probleem zich blijft voordoen.",
   "Created by me": "Door mij aangemaakt",
-  "Weird, this shouldn’t ever be empty": "Vreemd, dit zou nooit leeg moeten zijn",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Je hebt nog geen documenten aangemaakt",
   "Documents you’ve recently viewed will be here for easy access": "Documenten die je onlangs hebt bekeken zullen hier voor eenvoudige toegang zijn",
   "{{ count }} invites sent": "{{ count }} uitnodigingen verzonden",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Weet je zeker dat je de token {{ tokenName }} wilt intrekken?",
   "Disconnect integration": "Ontkoppel integratie",
   "Connected": "Verbonden",
+  "Disconnecting": "Ontkoppelen",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Weet je zeker dat je de koppeling met <em>{{ service }}</em> wilt verbreken?",
+  "This will stop sending analytics events to the configured instance.": "Hiermee stopt het verzenden van analytics-gebeurtenissen naar de geconfigureerde instantie.",
   "Allowed domains": "Toegestane domeinen",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "De domeinen die moeten kunnen worden toegestaan om nieuwe accounts met behulp van SSO te maken. Het wijzigen van deze instelling heeft geen invloed op bestaande gebruikersaccounts.",
   "Remove domain": "Domein verwijderen",
@@ -1218,6 +1221,9 @@
   "Expires today": "Verloopt vandaag",
   "Expires tomorrow": "Verloopt morgen",
   "Expires {{ date }}": "Verlopen {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Nieuw kenmerk",
   "Paper size": "Papierformaat",
   "Ask AI \"{{question}}\"": "Vraag AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} door jou aangemaakt",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} door {{ user }} aangemaakt",
   "Caption": "Onderschrift",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Fout bij laden van gegevens"
 }
