--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Opuściłeś udostępniony dokument",
   "Could not leave document": "Nie udało się opuścić dokumentu",
   "Apply template": "Użyj szablonu",
+  "Disconnect": "Rozłącz",
   "Disconnect analytics": "Odłącz analizę",
   "Home": "Strona Główna",
   "Drafts": "Kopie robocze",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Nie można załadować kolekcji, proszę odświeżyć aplikację",
   "Start view": "Widok startowy",
   "Install now": "Zainstaluj teraz",
-  "Disconnect": "Rozłącz",
-  "Disconnecting": "Rozłączanie",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Czy na pewno chcesz odłączyć integrację <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "To zatrzyma wysyłanie zdarzeń analitycznych do skonfigurowanej instancji.",
   "Deleted Collection": "Usunięta kolekcja",
   "Untitled": "Bez tytułu",
   "Unpin": "Odepnij",
@@ -314,8 +311,6 @@
   "Objects": "Obiekty",
   "Symbols": "Symbole",
   "Flags": "Flagi",
-  "Select a color": "Wybierz kolor",
-  "Loading": "Ładowanie",
   "View only": "Tylko podgląd",
   "Can edit": "Może edytować",
   "No access": "Brak dostępu",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Przeglądaj, nawiguj lub pobierz obrazy w dokumencie",
   "Zoom in": "Powiększ",
   "Zoom out": "Pomniejsz",
+  "Edit diagram": "Edit diagram",
   "Close": "Zamknij",
   "Previous": "Poprzedni",
   "Next": "Następny",
@@ -450,6 +446,8 @@
   "Installation": "Instalacja",
   "Unstar document": "Usuń oznaczenie gwiazdką",
   "Star document": "Oznacz dokument gwiazdką",
+  "Select a color": "Wybierz kolor",
+  "Loading": "Ładowanie",
   "Template created, go ahead and customize it": "Szablon utworzony, przejdź do przodu i dostosuj go",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Tworzenie szablonu z <em>{{titleWithDefault}}</em> jest akcją nieniszczącą - zrobimy kopię dokumentu i zamienimy go w szablonie, który może być użyty jako punkt wyjścia dla nowych dokumentów.",
   "Enable other members to use the template immediately": "Pozwól innym użytkownikom użyć tego szablonu",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Przepraszamy, wystąpił błąd podczas zapisywania kolekcji",
   "Add a description": "Dodaj opis",
   "Overview": "Informacje ogólne",
+  "Popular": "Popular",
   "Recently updated": "Ostatnio zaktualizowane",
   "Recently published": "Ostatnio opublikowane",
   "Least recently updated": "Najmniej ostatnio zaktualizowane",
@@ -783,7 +782,8 @@
   "Something went wrong": "Coś poszło nie tak",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Przepraszamy, wystąpił nieznany błąd podczas ładowania strony. Spróbuj ponownie lub skontaktuj się z pomocą techniczną, jeśli problem będzie się powtarzał.",
   "Created by me": "Utworzone przeze mnie",
-  "Weird, this shouldn’t ever be empty": "Dziwne, to nigdy nie powinno być puste",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Nie utworzyłeś jeszcze żadnych dokumentów",
   "Documents you’ve recently viewed will be here for easy access": "Tutaj będą dostępne dokumenty, które ostatnio przeglądałeś",
   "{{ count }} invites sent": "Wysłano {{ count }} zaproszeń",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Czy na pewno chcesz unieważnić token {{ tokenName }}?",
   "Disconnect integration": "Rozłącz integrację",
   "Connected": "Połączono",
+  "Disconnecting": "Rozłączanie",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Czy na pewno chcesz odłączyć integrację <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "To zatrzyma wysyłanie zdarzeń analitycznych do skonfigurowanej instancji.",
   "Allowed domains": "Dozwolone domeny",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domeny, które powinny być dozwolone do tworzenia nowych kont przy użyciu SSO. Zmiana tego ustawienia nie wpływa na istniejące konta użytkowników.",
   "Remove domain": "Usuń domenę",
@@ -1218,6 +1221,9 @@
   "Expires today": "Wygasa dzisiaj",
   "Expires tomorrow": "Wygasa jutro",
   "Expires {{ date }}": "Wygasa {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Nowy atrybut",
   "Paper size": "Format papieru",
   "Ask AI \"{{question}}\"": "Zapytaj AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Utworzyłeś {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} utworzył {{ timeAgo }}",
   "Caption": "Podpis",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Otwórz",
   "Error loading data": "Błąd ładowania danych"
 }
