--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "Disconnect": "Desligado",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Página inicial",
   "Drafts": "Rascunhos",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as Coleções, recarregue a aplicação",
   "Start view": "Vista inicial",
   "Install now": "Instalar agora",
-  "Disconnect": "Desligado",
-  "Disconnecting": "A desligar",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Coleção eliminada",
   "Untitled": "Sem título",
   "Unpin": "Tirar pino",
@@ -314,8 +311,6 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Bandeiras",
-  "Select a color": "Escolha uma cor",
-  "Loading": "A carregar",
   "View only": "Apenas consulta",
   "Can edit": "Pode editar",
   "No access": "Sem acesso",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Fechar",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "Instalação",
   "Unstar document": "Desmarcar documento",
   "Star document": "Documento favorito",
+  "Select a color": "Escolha uma cor",
+  "Loading": "A carregar",
   "Template created, go ahead and customize it": "Modelo criado, já o pode personalizar",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Criar um modelo de <em>{{titleWithDefault}}</em> é uma ação não destrutiva — será efetuada cópia do documento e será transformado em modelo que poderá ser usado como ponto de partida para novos documentos.",
   "Enable other members to use the template immediately": "Permitir que outros membros usem o modelo imediatamente",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Ocorreu um erro ao guardar a coleção",
   "Add a description": "Adicionar descrição",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos atualizado recentemente",
@@ -783,7 +782,8 @@
   "Something went wrong": "Ocorreu um erro",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Criado por mim",
-  "Weird, this shouldn’t ever be empty": "Estranho, isto nunca deve estar vazio",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Ainda não criou nenhum documento",
   "Documents you’ve recently viewed will be here for easy access": "Documentos que viu recentemente estarão aqui para acesso fácil",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza que quer revogar o token {{ tokenName }}?",
   "Disconnect integration": "Desligar integração",
   "Connected": "Ligado",
+  "Disconnecting": "A desligar",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Domínios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Os domínios que devem ser autorizados a criar contas usando SSO. Alterar esta configuração não afeta as contas de utilizador existentes.",
   "Remove domain": "Remover o domínio",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expira hoje",
   "Expires tomorrow": "Expira amanhã",
   "Expires {{ date }}": "Expira em {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Criou à {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} criado à {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
