--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Du har lämnat det delade dokumentet",
   "Could not leave document": "Kunde inte lämna dokument",
   "Apply template": "Använd mall",
+  "Disconnect": "Koppla från",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
   "Drafts": "Utkast",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Samlingarna kunde inte laddas, ladda om appen",
   "Start view": "Startvy",
   "Install now": "Installera nu",
-  "Disconnect": "Koppla från",
-  "Disconnecting": "Bortkopplar",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Är du säker på att du vill koppla från <em>{{ service }}</em>-integrationen?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raderad samling",
   "Untitled": "Utan titel",
   "Unpin": "Lossa",
@@ -314,8 +311,6 @@
   "Objects": "Objekt",
   "Symbols": "Symbol",
   "Flags": "Flaggor",
-  "Select a color": "Välj en färg",
-  "Loading": "Laddar",
   "View only": "Endast visa",
   "Can edit": "Kan redigera",
   "No access": "Ingen access",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Stäng",
   "Previous": "Föregående",
   "Next": "Nästa",
@@ -450,6 +446,8 @@
   "Installation": "Installation",
   "Unstar document": "Ostjärnmärk dokument",
   "Star document": "Stjärnmärk dokument",
+  "Select a color": "Välj en färg",
+  "Loading": "Laddar",
   "Template created, go ahead and customize it": "Mall skapad, gå vidare och anpassa den",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Att skapa en mall från <em>{{titleWithDefault}}</em> är en icke-förstörande åtgärd – vi gör en kopia av dokumentet och förvandlar det till en mall som kan användas som utgångspunkt för nya dokument.",
   "Enable other members to use the template immediately": "Tillåt andra medlemmar att använda mallen omedelbart",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Tyvärr, ett fel uppstod när samlingen skulle sparas",
   "Add a description": "Lägg till en beskrivning",
   "Overview": "Översikt",
+  "Popular": "Popular",
   "Recently updated": "Nyligen uppdaterad",
   "Recently published": "Nyligen publicerade",
   "Least recently updated": "Äldst uppdaterade",
@@ -783,7 +782,8 @@
   "Something went wrong": "Något gick fel",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Tyvärr, ett okänt fel uppstod när sidan laddades. Försök igen eller kontakta support om problemet kvarstår.",
   "Created by me": "Skapat av mig",
-  "Weird, this shouldn’t ever be empty": "Konstigt, detta bör aldrig vara tomt",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du har inte skapat några dokument ännu",
   "Documents you’ve recently viewed will be here for easy access": "Dokument du nyligen har besökt kommer att finnas här för enkel åtkomst",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Är du säker på att du vill återkalla {{ tokenName }} -token?",
   "Disconnect integration": "Koppla från integration",
   "Connected": "Ansluten",
+  "Disconnecting": "Bortkopplar",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Är du säker på att du vill koppla från <em>{{ service }}</em>-integrationen?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Tillåtna domäner",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "De domäner som bör tillåtas att skapa nya konton med SSO. Ändra denna inställning påverkar inte befintliga användarkonton.",
   "Remove domain": "Ta bort domän",
@@ -1218,6 +1221,9 @@
   "Expires today": "Går ut idag",
   "Expires tomorrow": "Går ut imorgon",
   "Expires {{ date }}": "Utgår {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Du skapade {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} skapade {{ timeAgo }}",
   "Caption": "Bildtext",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Öppna",
   "Error loading data": "Fel vid inläsning av data"
 }
