--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Paylaşılan belgeden ayrıldınız",
   "Could not leave document": "Belgeden ayrılamadı",
   "Apply template": "Şablonu uygula",
+  "Disconnect": "Bağlantıyı kes",
   "Disconnect analytics": "Analitiği kes",
   "Home": "Anasayfa",
   "Drafts": "Taslaklar",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Koleksiyonlar yüklenemedi, lütfen uygulamayı yeniden yükleyin",
   "Start view": "Başlangıç görünümü",
   "Install now": "Şimdi yükle",
-  "Disconnect": "Bağlantıyı kes",
-  "Disconnecting": "Bağlantı kesiliyor",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "<em>{{ service }}</em> entegrasyonunun bağlantısını kesmek istediğinizden emin misiniz?",
-  "This will stop sending analytics events to the configured instance.": "Bu, yapılandırılan örneğe analitik olayları göndermeyi durduracaktır.",
   "Deleted Collection": "Silinmiş Koleksiyon",
   "Untitled": "Başlıksız",
   "Unpin": "Sabitlemeyi kaldır",
@@ -314,8 +311,6 @@
   "Objects": "Nesneler",
   "Symbols": "Semboller",
   "Flags": "Bayraklar",
-  "Select a color": "Bir renk seçin",
-  "Loading": "Yükleniyor",
   "View only": "Sadece görüntüle",
   "Can edit": "Düzenleyebilir",
   "No access": "Erişim yok",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "Belgedeki görselleri görüntüleyin, gezinin veya indirin",
   "Zoom in": "Yakınlaştır",
   "Zoom out": "Uzaklaştır",
+  "Edit diagram": "Edit diagram",
   "Close": "Kapat",
   "Previous": "Önceki",
   "Next": "Sonraki",
@@ -450,6 +446,8 @@
   "Installation": "Kurulum",
   "Unstar document": "Belgenin yıldızını kaldır",
   "Star document": "Belgeyi yıldızla",
+  "Select a color": "Bir renk seçin",
+  "Loading": "Yükleniyor",
   "Template created, go ahead and customize it": "Şablon oluşturuldu, devam edin ve özelleştirin",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "<em>{{titleWithDefault}}</em> belgesinden şablon oluşturmak bozucu olmayan bir işlemdir – belgenin bir kopyasını oluşturacağız ve onu yeni belgeler için başlangıç noktası olarak kullanılabilecek bir şablona dönüştüreceğiz.",
   "Enable other members to use the template immediately": "Diğer üyelerin şablonu hemen kullanmasını sağla",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Üzgünüz, koleksiyon kaydedilirken bir hata oluştu",
   "Add a description": "Bir açıklama ekle",
   "Overview": "Genel Bakış",
+  "Popular": "Popular",
   "Recently updated": "Yakın zamanda güncellenen",
   "Recently published": "Yakın zamanda yayınlanan",
   "Least recently updated": "En az yakın zamanda güncellenen",
@@ -783,7 +782,8 @@
   "Something went wrong": "Bir şeyler yanlış gitti",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Üzgünüz, sayfayı yüklerken bilinmeyen bir hata oluştu. Lütfen tekrar deneyin veya sorun devam ederse destek ile iletişime geçin.",
   "Created by me": "Benim tarafımdan oluşturuldu",
-  "Weird, this shouldn’t ever be empty": "Garip, bu asla boş olmamalı",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Henüz herhangi bir belge oluşturmadınız",
   "Documents you’ve recently viewed will be here for easy access": "Yakın zamanda görüntülediğiniz belgeler, kolay erişim için burada olacak",
   "{{ count }} invites sent": "{{ count }} davet gönderildi",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "{{ tokenName }} belirtecini iptal etmek istediğinizden emin misiniz?",
   "Disconnect integration": "Entegrasyon bağlantısını kes",
   "Connected": "Bağlandı",
+  "Disconnecting": "Bağlantı kesiliyor",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "<em>{{ service }}</em> entegrasyonunun bağlantısını kesmek istediğinizden emin misiniz?",
+  "This will stop sending analytics events to the configured instance.": "Bu, yapılandırılan örneğe analitik olayları göndermeyi durduracaktır.",
   "Allowed domains": "İzin verilen alan adları",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO kullanarak yeni hesap oluşturmasına izin verilmesi gereken alan adları. Bu ayarın değiştirilmesi mevcut kullanıcı hesaplarını etkilemez.",
   "Remove domain": "Alan adını kaldır",
@@ -1218,6 +1221,9 @@
   "Expires today": "Bugün sona eriyor",
   "Expires tomorrow": "Yarın sona eriyor",
   "Expires {{ date }}": "{{ date }} tarihinde sona eriyor",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Yeni özellik",
   "Paper size": "Kağıt boyutu",
   "Ask AI \"{{question}}\"": "Yapay Zekaya Sor \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Siz {{ timeAgo }} önce oluşturdunuz",
   "{{ user }} created {{ timeAgo }}": "{{ user }} {{ timeAgo }} önce oluşturdu",
   "Caption": "Altyazı",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Aç",
   "Error loading data": "Veri yüklenirken hata"
 }
