--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
   "Apply template": "Застосувати шаблон",
+  "Disconnect": "Від'єднатись",
   "Disconnect analytics": "Від'єднати аналітику",
   "Home": "Головна",
   "Drafts": "Чернетки",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Не вдалося завантажити колекції. Перезавантажте програму",
   "Start view": "Почати перегляд",
   "Install now": "Встановити зараз",
-  "Disconnect": "Від'єднатись",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Видалена колекція",
   "Untitled": "Без назви",
   "Unpin": "Відкріпити",
@@ -314,8 +311,6 @@
   "Objects": "Об'єкти",
   "Symbols": "Символи",
   "Flags": "Прапори",
-  "Select a color": "Виберіть колір",
-  "Loading": "Завантаження",
   "View only": "Тільки перегляд",
   "Can edit": "Можна редагувати",
   "No access": "Немає доступу",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Закрити",
   "Previous": "Previous",
   "Next": "Next",
@@ -377,7 +373,7 @@
   "Disable this setting to discourage search engines from indexing the page": "Вимкніть цей параметр, щоб заборонити пошуковій системі індексувати сторінку",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
-  "Show table of contents": "Show table of contents",
+  "Show table of contents": "Показ змісту",
   "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Запросити",
@@ -450,6 +446,8 @@
   "Installation": "Встановлення",
   "Unstar document": "Видалити з обраного",
   "Star document": "Додати до обраного",
+  "Select a color": "Виберіть колір",
+  "Loading": "Завантаження",
   "Template created, go ahead and customize it": "Шаблон створено, тепер налаштуйте його під ваші потреби",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Створення шаблону з <em>{{titleWithDefault}}</em> не є руйнівною дією – ми зробимо копію документа та перетворимо її на шаблон, який можна використовувати як основу для нових документів.",
   "Enable other members to use the template immediately": "Дозволити іншим учасникам відразу використовувати шаблон",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "На жаль, під час збереження колекції сталася помилка",
   "Add a description": "Додати опис",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Нещодавно оновлені",
   "Recently published": "Нещодавно опубліковані",
   "Least recently updated": "Останнє оновлення",
@@ -783,7 +782,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Створені мною",
-  "Weird, this shouldn’t ever be empty": "Дивно, це ніколи не повинно бути порожнім",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Ви ще не створили жодного документу",
   "Documents you’ve recently viewed will be here for easy access": "Документи, які ви нещодавно переглянули, будуть тут, для легкого доступу",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Ви впевнені, що хочете відкликати {{ tokenName }}  токен?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Підключено",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Дозволені домени",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Домени, яким має бути дозволено створювати нові облікові записи за допомогою системи єдиного входу. Зміна цього параметра не впливає на наявні облікові записи користувачів.",
   "Remove domain": "Видалити домен",
@@ -1066,9 +1069,9 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Відобразити",
   "The logo is displayed at the top left of the application.": "Логотип відображається у верхньому лівому кутку програми.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Логотип робочої області",
   "The workspace name, usually the same as your company name.": "Назва робочого простору, зазвичай, така сама як назва вашої компанії.",
-  "A short description of your workspace.": "A short description of your workspace.",
+  "A short description of your workspace.": "Короткий опис робочої області.",
   "Theme": "Тема",
   "Customize the interface look and feel.": "Налаштуйте зовнішній вигляд інтерфейсу.",
   "Reset theme": "Скинути тему",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Ви створили {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} створив {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
