--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
   "Apply template": "Apply template",
+  "Disconnect": "Odpojit",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Domovská stránka",
   "Drafts": "Koncepty",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Sbírky se nepodařilo načíst, prosím načtěte aplikaci znovu",
   "Start view": "Domovská obrazovka",
   "Install now": "Nainstalovat",
-  "Disconnect": "Odpojit",
-  "Disconnecting": "Odpojování",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Odstraněná sbírka",
   "Untitled": "Bez názvu",
   "Unpin": "Zrušit připnutí",
@@ -314,8 +311,6 @@
   "Objects": "Objekty",
   "Symbols": "Symboly",
   "Flags": "Vlajky",
-  "Select a color": "Vybrat barvu",
-  "Loading": "Načítání",
   "View only": "Pouze zobrazit",
   "Can edit": "Může upravovat",
   "No access": "Bez přístupu",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Zavřít",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "Instalace",
   "Unstar document": "Odznačit dokument",
   "Star document": "Označit dokument",
+  "Select a color": "Vybrat barvu",
+  "Loading": "Načítání",
   "Template created, go ahead and customize it": "Šablona vytvořena, pokračujte a přizpůsobte ji",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Vytvoření šablony z <em>{{titleWithDefault}}</em> je nedestruktivní akce – vytvoříme kopii dokumentu a přeměníme ji na šablonu, kterou lze použít jako výchozí bod pro nové dokumenty.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Omlouváme se, při ukládání sbírky došlo k chybě",
   "Add a description": "Přidat popis",
   "Overview": "Přehled",
+  "Popular": "Popular",
   "Recently updated": "Nedávno aktualizováno",
   "Recently published": "Nedávno zveřejněné",
   "Least recently updated": "Naposledy aktualizováno",
@@ -783,7 +782,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Vytvořeno mnou",
-  "Weird, this shouldn’t ever be empty": "Divné, tohle by nikdy nemělo být prázdné",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Zatím jste nevytvořili žádné dokumenty",
   "Documents you’ve recently viewed will be here for easy access": "Dokumenty, které jste si nedávno prohlíželi, zde budou pro snadný přístup",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Skutečně chcete zrušit token {{ tokenName }}?",
   "Disconnect integration": "Odebrat integraci",
   "Connected": "Připojeno",
+  "Disconnecting": "Odpojování",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Povolené domény",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domény, které by měly mít povoleno vytvářet nové účty pomocí SSO. Změna tohoto nastavení nemá vliv na stávající uživatelské účty.",
   "Remove domain": "Odstranit doménu",
@@ -1218,6 +1221,9 @@
   "Expires today": "Vyprší dnes",
   "Expires tomorrow": "Vyprší zítra",
   "Expires {{ date }}": "Vyprší {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Vytvořili jste před {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} vytvořil před {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
