--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
   "Apply template": "Aplicar plantilla",
+  "Disconnect": "Desconectar",
   "Disconnect analytics": "Desconectar analítica",
   "Home": "Inicio",
   "Drafts": "Borradores",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "No se pudieron cargar las colecciones, por favor recarga la aplicación",
   "Start view": "Vista inicial",
   "Install now": "Instalar ahora",
-  "Disconnect": "Desconectar",
-  "Disconnecting": "Desconectando",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "¿Estás seguro de que quieres desconectar la integración <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "Esto dejará de enviar eventos analíticos a la instancia configurada.",
   "Deleted Collection": "Colección Eliminada",
   "Untitled": "Sin título",
   "Unpin": "Desfijar",
@@ -314,8 +311,6 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Banderas",
-  "Select a color": "Selecciona un color",
-  "Loading": "Cargando",
   "View only": "Solo lectura",
   "Can edit": "Puede editar",
   "No access": "Sin acceso",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Cerrar",
   "Previous": "Previous",
   "Next": "Siguiente",
@@ -450,6 +446,8 @@
   "Installation": "Instalación",
   "Unstar document": "Eliminar documento de favoritos",
   "Star document": "Marcar documento como favorito",
+  "Select a color": "Selecciona un color",
+  "Loading": "Cargando",
   "Template created, go ahead and customize it": "Plantilla creada, procede a personalizarla",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Crear una plantilla a partir de <em>{{titleWithDefault}}</em> es una acción no destructiva – crearemos una copia del documento y la convertiremos en una plantilla que se puede utilizar como punto de partida para nuevos documentos.",
   "Enable other members to use the template immediately": "Habilitar a otros miembros para utilizar la plantilla inmediatamente",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Lo sentimos, se ha producido un error al guardar la colección",
   "Add a description": "Añadir una descripción",
   "Overview": "Resumen",
+  "Popular": "Popular",
   "Recently updated": "Actualizado recientemente",
   "Recently published": "Publicado recientemente",
   "Least recently updated": "Actualizado menos recientemente",
@@ -783,7 +782,8 @@
   "Something went wrong": "Algo ha salido mal",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Creado por mí",
-  "Weird, this shouldn’t ever be empty": "Que raro, esto nunca debería estar vacío",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Aún no has creado ningún documento",
   "Documents you’ve recently viewed will be here for easy access": "Los documentos que hayas visto recientemente estarán aquí para fácil acceso",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "¿Estás seguro de que quieres revocar el token {{ tokenName }}?",
   "Disconnect integration": "Desconectar integración",
   "Connected": "Conectado",
+  "Disconnecting": "Desconectando",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "¿Estás seguro de que quieres desconectar la integración <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "Esto dejará de enviar eventos analíticos a la instancia configurada.",
   "Allowed domains": "Dominios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Los dominios que deberían poder crear nuevas cuentas usando SSO. Cambiar esta configuración no afecta a las cuentas de usuario existentes.",
   "Remove domain": "Eliminar dominio",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expira hoy",
   "Expires tomorrow": "Expira mañana",
   "Expires {{ date }}": "Expira el {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Tú lo creaste {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} lo creó {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error al cargar datos"
 }
