--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Elhagytad a megosztott dokumentumot",
   "Could not leave document": "Nem lehet menteni a dokumentumot",
   "Apply template": "Sablon használata",
+  "Disconnect": "Megszakít",
   "Disconnect analytics": "Analitika leválasztása",
   "Home": "Kezdőlap",
   "Drafts": "Piszkozatok",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "A gyűjtemények nem tölthetők be, kérem töltse újra a programot",
   "Start view": "Kezdje el",
   "Install now": "Telepítés most",
-  "Disconnect": "Megszakít",
-  "Disconnecting": "Kapcsolat megszakítása",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Biztos vagy benne, hogy le akarod választani a {{ service }} integrációt?",
-  "This will stop sending analytics events to the configured instance.": "Ez megállítja az analitikai események küldését a beállított fogadónak.",
   "Deleted Collection": "Törölt gyűjtemény",
   "Untitled": "Névtelen",
   "Unpin": "Feloldás",
@@ -314,8 +311,6 @@
   "Objects": "Tárgyak",
   "Symbols": "Szimbólumok",
   "Flags": "Zászlók",
-  "Select a color": "Válasszon egy színt",
-  "Loading": "Betöltés",
   "View only": "Csak megtekintés",
   "Can edit": "Szerkesztheti",
   "No access": "Nincs hozzáférés",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Nagyítás",
   "Zoom out": "Kicsinyítés",
+  "Edit diagram": "Edit diagram",
   "Close": "Bezár",
   "Previous": "Előző",
   "Next": "Következő",
@@ -450,6 +446,8 @@
   "Installation": "Telepítés",
   "Unstar document": "Dokumentum csillagozásának törlése",
   "Star document": "Dokumentum csillagozása",
+  "Select a color": "Válasszon egy színt",
+  "Loading": "Betöltés",
   "Template created, go ahead and customize it": "A sablon elkészült, fogjon bele a testreszabásba",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Sablon létrehozása a(z) <em>{{titleWithDefault}}</em> dokumentumból \"roncsolásmentes\" művelet – egy másolatot készítünk a dokumentumból, melyből sablon lesz, ami új dokumentumok kiinduló pontjának használható.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Sajnálom, valami hiba merült fel a gyűjtemény mentése közben",
   "Add a description": "Adja meg a leírást",
   "Overview": "Áttekintés",
+  "Popular": "Popular",
   "Recently updated": "Nemrég módosítva",
   "Recently published": "Nemrég publikálva",
   "Least recently updated": "Legrégebben módosított",
@@ -783,7 +782,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Általam létrehozva",
-  "Weird, this shouldn’t ever be empty": "Weird, this shouldn’t ever be empty",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "You haven’t created any documents yet",
   "Documents you’ve recently viewed will be here for easy access": "Documents you’ve recently viewed will be here for easy access",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -936,7 +936,7 @@
   "Past year": "Elmúlt év",
   "Any time": "Bármikor",
   "Remove document filter": "Remove document filter",
-  "Any status": "Any status",
+  "Any status": "Bármilyen állapot",
   "Remove search": "Remove search",
   "Any author": "Bármely szerző",
   "Search titles only": "Keresés csak címekben",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Connected",
+  "Disconnecting": "Kapcsolat megszakítása",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Biztos vagy benne, hogy le akarod választani a {{ service }} integrációt?",
+  "This will stop sending analytics events to the configured instance.": "Ez megállítja az analitikai események küldését a beállított fogadónak.",
   "Allowed domains": "Allowed domains",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
   "Remove domain": "Remove domain",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Ön hozta létre {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
