--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "Disconnect": "Memutuskan",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Beranda",
   "Drafts": "Draf",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Koleksi tidak dapat dimuat, harap muat ulang aplikasi",
   "Start view": "Tampilan awal",
   "Install now": "Pasang sekarang",
-  "Disconnect": "Memutuskan",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Koleksi Dihapus",
   "Untitled": "Tak Berjudul",
   "Unpin": "Unpin",
@@ -314,8 +311,6 @@
   "Objects": "Objects",
   "Symbols": "Symbols",
   "Flags": "Flags",
-  "Select a color": "Pilih warna",
-  "Loading": "Memuat",
   "View only": "Hanya melihat",
   "Can edit": "Can edit",
   "No access": "Tidak memiliki akses",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Menutup",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "Pemasangan",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
+  "Select a color": "Pilih warna",
+  "Loading": "Memuat",
   "Template created, go ahead and customize it": "Template telah dibuat, silakan disesuaikan",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Membuat template dari <em>{{titleWithDefault}}</em> adalah tindakan yang tidak merusak – kami akan membuat salinan dokumen dan mengubahnya menjadi template yang dapat digunakan sebagai titik awal untuk dokumen baru.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Maaf, terjadi kesalahan saat menyimpan koleksi",
   "Add a description": "Tambahkan keterangan",
   "Overview": "Overview",
+  "Popular": "Popular",
   "Recently updated": "Baru diperbarui",
   "Recently published": "Baru diterbitkan",
   "Least recently updated": "Baru-baru ini diperbarui",
@@ -783,7 +782,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Dibuat oleh saya",
-  "Weird, this shouldn’t ever be empty": "Aneh, ini seharusnya tidak pernah kosong",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Anda belum membuat dokumen apa pun",
   "Documents you’ve recently viewed will be here for easy access": "Dokumen yang baru saja Anda lihat akan ada di sini agar mudah diakses",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Apakah Anda yakin ingin mencabut token {{ tokenName }}?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Terhubung",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Domain yang diizinkan",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domain yang seharusnya diizinkan untuk membuat akun baru menggunakan SSO. Mengubah setelan ini tidak memengaruhi akun pengguna yang ada.",
   "Remove domain": "Hapus domain",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
