--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "공유 문서 나갔습니다",
   "Could not leave document": "문서를 나갈 수 없습니다",
   "Apply template": "템플릿 적용",
+  "Disconnect": "연결 해제",
   "Disconnect analytics": "분석 연결 해제",
   "Home": "홈",
   "Drafts": "임시 보관함",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "컬렉션을 불러올 수 없습니다. 앱을 새로고침하세요",
   "Start view": "시작 화면",
   "Install now": "지금 설치",
-  "Disconnect": "연결 해제",
-  "Disconnecting": "연결을 해제하는 중",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "서비스 <em>{{ service }}</em>와 통합을 해제하시겠습니까?",
-  "This will stop sending analytics events to the configured instance.": "이렇게 하면 구성된 인스턴스로 분석 이벤트가 전송되지 않습니다.",
   "Deleted Collection": "삭제 된 콜렉션",
   "Untitled": "제목없음",
   "Unpin": "고정 해제",
@@ -314,8 +311,6 @@
   "Objects": "사물",
   "Symbols": "상징",
   "Flags": "깃발",
-  "Select a color": "색상 선택",
-  "Loading": "로딩 중",
   "View only": "보기 전용",
   "Can edit": "편집 가능",
   "No access": "접근 불가",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "문서에서 이미지 보기, 탐색 또는 다운로드",
   "Zoom in": "확대",
   "Zoom out": "축소",
+  "Edit diagram": "Edit diagram",
   "Close": "닫기",
   "Previous": "이전",
   "Next": "다음",
@@ -450,6 +446,8 @@
   "Installation": "설치",
   "Unstar document": "문서 별표 해제",
   "Star document": "문서 별표 표시",
+  "Select a color": "색상 선택",
+  "Loading": "로딩 중",
   "Template created, go ahead and customize it": "템플릿이 생성되었습니다. 커스터마이징이 가능합니다.",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "<em>{{titleWithDefault}}</em>에서 템플릿을 만들더라도 원본 문서는 수정되지 않습니다. 이 문서의 복사본을 생성해서 새 문서의 시작점으로 사용할 수 있는 템플릿을 만듭니다.",
   "Enable other members to use the template immediately": "다른 멤버가 템플릿을 즉시 사용할 수 있도록 설정",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "컬렉션을 저장하는 중에 오류가 발생했습니다.",
   "Add a description": "설명 추가",
   "Overview": "개요",
+  "Popular": "Popular",
   "Recently updated": "최근에 업데이트됨",
   "Recently published": "최근에 게시됨",
   "Least recently updated": "오래된 순",
@@ -783,7 +782,8 @@
   "Something went wrong": "문제가 발생했습니다",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "죄송합니다. 페이지를 로드하는 중에 알 수 없는 오류가 발생했습니다. 다시 시도하거나 문제가 지속되면 지원팀에 문의하세요.",
   "Created by me": "내가 생성함",
-  "Weird, this shouldn’t ever be empty": "이상하네, 여기가 비어 있으면 안 되는데",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "아직 문서를 만들지 않았습니다.",
   "Documents you’ve recently viewed will be here for easy access": "쉽게 액세스할 수 있도록 최근에 본 문서가 여기에 표시됩니다.",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "{{ tokenName }} 토큰을 취소하시겠습니까?",
   "Disconnect integration": "통합 해제",
   "Connected": "연결됨",
+  "Disconnecting": "연결을 해제하는 중",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "서비스 <em>{{ service }}</em>와 통합을 해제하시겠습니까?",
+  "This will stop sending analytics events to the configured instance.": "이렇게 하면 구성된 인스턴스로 분석 이벤트가 전송되지 않습니다.",
   "Allowed domains": "허용된 도메인",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO를 사용하여 새 계정을 만들 수 있도록 허용해야 하는 도메인입니다. 이 설정을 변경해도 기존 사용자 계정에는 영향을 미치지 않습니다.",
   "Remove domain": "도메인 삭제",
@@ -1218,6 +1221,9 @@
   "Expires today": "오늘 만료",
   "Expires tomorrow": "내일 만료",
   "Expires {{ date }}": "{{ date }} 에 만료",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} 전에 내가 생성함",
   "{{ user }} created {{ timeAgo }}": "{{ user }} 이(가) {{ timeAgo }} 전에 생성",
   "Caption": "캡션",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "열기",
   "Error loading data": "데이터 로딩 오류"
 }
