--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Você deixou o documento compartilhado",
   "Could not leave document": "Não foi possível sair do documento",
   "Apply template": "Aplicar modelo",
+  "Disconnect": "Desconectar",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Início",
   "Drafts": "Rascunhos",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as coleções, recarregue o aplicativo",
   "Start view": "Visualização de início",
   "Install now": "Instalar agora",
-  "Disconnect": "Desconectar",
-  "Disconnecting": "Desconectando",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Você realmente deseja desconectar a integração <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Excluir Coleção",
   "Untitled": "Sem título",
   "Unpin": "Desafixar",
@@ -314,8 +311,6 @@
   "Objects": "Objetos",
   "Symbols": "Símbolos",
   "Flags": "Bandeiras",
-  "Select a color": "Selecione uma cor",
-  "Loading": "Carregando",
   "View only": "Somente visualização",
   "Can edit": "Pode editar",
   "No access": "Sem acesso",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Fechar",
   "Previous": "Anterior",
   "Next": "Próximo",
@@ -450,6 +446,8 @@
   "Installation": "Instalação",
   "Unstar document": "Desfavoritar documento",
   "Star document": "Favoritar documento",
+  "Select a color": "Selecione uma cor",
+  "Loading": "Carregando",
   "Template created, go ahead and customize it": "Modelo criado, vá em frente e personalize-o",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Criar um modelo a partir de <em>{{titleWithDefault}}</em> é uma ação não destrutiva — faremos uma cópia do documento e o transformaremos em um modelo que pode ser usado como ponto de partida para novos documentos.",
   "Enable other members to use the template immediately": "Permitir que outros membros usem o modelo imediatamente",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Desculpe, ocorreu um erro ao salvar a coleção",
   "Add a description": "Adicionar uma descrição",
   "Overview": "Visão geral",
+  "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos recentemente atualizados",
@@ -783,7 +782,8 @@
   "Something went wrong": "Algo deu errado",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Desculpe, ocorreu um erro desconhecido ao carregar a página. Tente novamente ou entre em contato com o suporte se o problema continuar.",
   "Created by me": "Criado por mim",
-  "Weird, this shouldn’t ever be empty": "Estranho, isso nunca deveria estar vazio",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Você ainda não criou nenhum documento",
   "Documents you’ve recently viewed will be here for easy access": "Os documentos que você visualizou recentemente estarão aqui para facilitar o acesso",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza de que deseja revogar a chave de api {{ tokenName }}?",
   "Disconnect integration": "Desconectar integração",
   "Connected": "Conectado",
+  "Disconnecting": "Desconectando",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Você realmente deseja desconectar a integração <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Domínios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Os domínios que devem ser autorizados a criar novas contas usando SSO. Alterar esta configuração não afeta as contas de usuários existentes.",
   "Remove domain": "Remover domínio",
@@ -1218,6 +1221,9 @@
   "Expires today": "Vence hoje",
   "Expires tomorrow": "Vence amanhã",
   "Expires {{ date }}": "Vence em {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "Você criou {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} criou {{ timeAgo }}",
   "Caption": "Título",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Abrir",
   "Error loading data": "Erro ao carregar os dados"
 }
