--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Không thể rời tài liệu này",
   "Apply template": "Áp dụng mẫu",
+  "Disconnect": "Ngắt kết nối",
   "Disconnect analytics": "Ngắt kết nối thống kê",
   "Home": "Trang chủ",
   "Drafts": "Bản nháp",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Không thể tải bộ sưu tập, vui lòng tải lại ứng dụng",
   "Start view": "Bắt đầu xem",
   "Install now": "Cài đặt ngay",
-  "Disconnect": "Ngắt kết nối",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Xóa Bộ Sưu Tập",
   "Untitled": "Chưa đặt tên",
   "Unpin": "Bỏ ghim",
@@ -314,8 +311,6 @@
   "Objects": "Đối tượng",
   "Symbols": "Biểu tượng",
   "Flags": "Cờ",
-  "Select a color": "Chọn Màu",
-  "Loading": "Đang tải",
   "View only": "Chỉ xem",
   "Can edit": "Có thể chỉnh sửa",
   "No access": "Không có quyền truy cập",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Đóng",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "Cài đặt",
   "Unstar document": "Bỏ sao tài liệu",
   "Star document": "Đánh sao tài liệu",
+  "Select a color": "Chọn Màu",
+  "Loading": "Đang tải",
   "Template created, go ahead and customize it": "Đã tạo mẫu, hãy tiếp tục và tùy chỉnh nó",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Đang tạo mẫu từ <em>{{titleWithDefault}}</em> là một hành động không phá hủy - chúng tôi sẽ tạo một bản sao của tài liệu và biến nó thành một mẫu có thể được sử dụng làm điểm bắt đầu cho các tài liệu mới.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
   "Add a description": "Thêm mô tả",
   "Overview": "Tổng quan",
+  "Popular": "Popular",
   "Recently updated": "Mới cập nhật",
   "Recently published": "Mới đăng tải",
   "Least recently updated": "Cập nhật ít nhất gần đây",
@@ -783,7 +782,8 @@
   "Something went wrong": "Something went wrong",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "Được tạo bởi tôi",
-  "Weird, this shouldn’t ever be empty": "Cái này không bao giờ được để trống",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Bạn chưa tạo bất kỳ tài liệu nào",
   "Documents you’ve recently viewed will be here for easy access": "Các tài liệu bạn đã xem gần đây sẽ ở đây để dễ dàng truy cập",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Bạn có chắc chắn muốn thu hồi Token {{ tokenName }} không?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Đã kết nối",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Các tên miền cho phép",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Các miền được phép tạo tài khoản mới bằng SSO. Việc thay đổi cài đặt này không ảnh hưởng đến các tài khoản người dùng hiện có.",
   "Remove domain": "Xóa tên miền",
@@ -1218,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
