--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "您已退出共享文档",
   "Could not leave document": "无法退出文档",
   "Apply template": "应用模板",
+  "Disconnect": "断开连接",
   "Disconnect analytics": "断开分析服务连接",
   "Home": "主页",
   "Drafts": "草稿箱",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "无法加载文档集，请重新加载应用",
   "Start view": "开始浏览",
   "Install now": "立即安装",
-  "Disconnect": "断开连接",
-  "Disconnecting": "正在断开连接",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "您确定要移除与 <em>{{ service }}</em> 的集成吗？",
-  "This will stop sending analytics events to the configured instance.": "这将停止向配置实例发送分析事件。",
   "Deleted Collection": "删除文档集",
   "Untitled": "无标题",
   "Unpin": "取消置顶",
@@ -314,8 +311,6 @@
   "Objects": "物品",
   "Symbols": "符号",
   "Flags": "标志",
-  "Select a color": "选择颜色",
-  "Loading": "加载中",
   "View only": "仅浏览",
   "Can edit": "可编辑",
   "No access": "无访问权限",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "浏览、查看或下载文档中的图片",
   "Zoom in": "放大",
   "Zoom out": "缩小",
+  "Edit diagram": "Edit diagram",
   "Close": "关闭",
   "Previous": "上一个",
   "Next": "下一个",
@@ -450,6 +446,8 @@
   "Installation": "安装",
   "Unstar document": "取消收藏文档",
   "Star document": "收藏文档",
+  "Select a color": "选择颜色",
+  "Loading": "加载中",
   "Template created, go ahead and customize it": "模板已创建，继续进行自定义",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "从 <em>{{titleWithDefault}}</em> 创建模板是一个非破坏性的操作 - 我们将制作一个文档副本，并将其变成一个可以用作新文档起点的模板。",
   "Enable other members to use the template immediately": "允许其他成员立即使用该模板",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
   "Add a description": "添加描述",
   "Overview": "概览",
+  "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近发布",
   "Least recently updated": "最近最少更新",
@@ -783,7 +782,8 @@
   "Something went wrong": "出现了一些错误",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "抱歉，加载页面时发生未知错误。请重试，如果问题仍然存在，请与支持者联系。",
   "Created by me": "由我创建",
-  "Weird, this shouldn’t ever be empty": "奇怪，这里不应该是空的",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "你尚未创建任何文档",
   "Documents you’ve recently viewed will be here for easy access": "你最近浏览过的文档将放在此处以方便快速访问",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "确认吊销这个 {{ tokenName }} token 吗？",
   "Disconnect integration": "断开集成",
   "Connected": "已连接",
+  "Disconnecting": "正在断开连接",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "您确定要移除与 <em>{{ service }}</em> 的集成吗？",
+  "This will stop sending analytics events to the configured instance.": "这将停止向配置实例发送分析事件。",
   "Allowed domains": "允许的域",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "应该允许使用 SSO 创建新帐户的域。更改此设置不会影响现有用户帐户。",
   "Remove domain": "删除域",
@@ -1218,6 +1221,9 @@
   "Expires today": "今天过期",
   "Expires tomorrow": "明天过期",
   "Expires {{ date }}": "{{date}} 到期",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} 由你创建",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 创建",
   "Caption": "说明",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "打开",
   "Error loading data": "加载数据时出错"
 }
