--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "您離開了共享的文件",
   "Could not leave document": "無法離開文件",
   "Apply template": "Apply template",
+  "Disconnect": "解除連結",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "首頁",
   "Drafts": "草稿",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "文件集無法被載入，請重新整理 App",
   "Start view": "初始介面",
   "Install now": "立即安裝",
-  "Disconnect": "解除連結",
-  "Disconnecting": "正在中斷",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "刪除的文件集",
   "Untitled": "無標題",
   "Unpin": "取消釘選",
@@ -314,8 +311,6 @@
   "Objects": "物品",
   "Symbols": "符號",
   "Flags": "旗幟",
-  "Select a color": "選擇顏色",
-  "Loading": "正在讀取",
   "View only": "只可檢視",
   "Can edit": "可以編輯",
   "No access": "無存取權限",
@@ -327,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "關閉",
   "Previous": "Previous",
   "Next": "Next",
@@ -450,6 +446,8 @@
   "Installation": "安裝",
   "Unstar document": "取消星號",
   "Star document": "標示星號",
+  "Select a color": "選擇顏色",
+  "Loading": "正在讀取",
   "Template created, go ahead and customize it": "範本已經建立，繼續將其客製化",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "從 <em>{{titleWithDefault}}</em> 建立範本是不會對原本的文件造成影響－我們會將文件複製後並將其轉換為可以用來建立新文件的範本。",
   "Enable other members to use the template immediately": "允許其它成員立即使用此範本",
@@ -666,6 +664,7 @@
   "Sorry, an error occurred saving the collection": "抱歉，儲存到文件集時發生了錯誤。",
   "Add a description": "新增描述",
   "Overview": "概覽",
+  "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近發布",
   "Least recently updated": "很久以前更新",
@@ -783,7 +782,8 @@
   "Something went wrong": "發生了某些錯誤",
   "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "由我建立的",
-  "Weird, this shouldn’t ever be empty": "怪了，這不應該是空的",
+  "Weird, this shouldn't ever be empty": "Weird, this shouldn't ever be empty",
+  "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "您還沒有建立任何文件",
   "Documents you’ve recently viewed will be here for easy access": "您最近檢視過的文件會被列於此方便您快速存取",
   "{{ count }} invites sent": "{{ count }} invites sent",
@@ -977,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "您確定要撤銷 {{ tokenName }} 權杖嗎？",
   "Disconnect integration": "中斷整合",
   "Connected": "已連接",
+  "Disconnecting": "正在中斷",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "域名白名單",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "應該要可以使用SSO建立新帳號的網域。更改這個並不會影響現有的帳號。",
   "Remove domain": "移除網域",
@@ -1218,6 +1221,9 @@
   "Expires today": "今天到期",
   "Expires tomorrow": "明天到期",
   "Expires {{ date }}": "{{ date }} 到期",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1367,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} 由您新增",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 新增",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
